tests/NormalTests/paczka1/small_fuzzy/35764268.err
Error in line 4: 0zrcpql A669 93,8
Error in line 5: 0zrcpql S356 64,6
Error in line 6: mCsRrAKovU S428 78,7
Error in line 2: A231 S428 66,1
Error in line 9: mCsRrAKovU A669 0,1
